fix reviews overlapping map

--- a/css/styles.css
+++ b/css/styles.css
@@ -129,6 +129,7 @@ nav h1 a {
   margin: 10px;
   padding: 0 10px;
   width: 200px;
+  outline-color: red;
 }
 
 /* ====================== Restaurant Listing ====================== */
@@ -252,7 +253,8 @@ nav h1 a {
   text-transform: uppercase;
 	width: 90%;
 }
-#restaurant-container, #reviews-container {
+#restaurant-container,
+#reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   padding: 140px 40px 30px;
@@ -278,10 +280,11 @@ nav h1 a {
   display: block;
   list-style-type: none;
   margin: 0 0 30px;
-  overflow: hidden;
+  /*overflow: hidden;*/
   padding: 0 20px 20px;
-  position: relative;
+  /*position: relative;*/
   width: 85%;
+  z-index: 0;
 }
 #reviews-list li p {
   margin: 0 0 10px;
@@ -338,7 +341,11 @@ nav h1 a {
 
   #restaurant-container{
     padding: 350px 40px 30px;
-    width: 81%;
+    width: 100%;
+  }
+
+  main {
+    width: 100%;
   }
 
   #reviews-container {
